<resources>
    <string name="app_name">Haku Bank 2.0</string>
    <string name="sp__storage_id">hakubank_sp_storage</string>
    <string name="sp__access_token_id">access_token</string>
    <string name="main_activity__root_alert_text">Root detected!</string>
    <string name="main_activity__environment_modification_alert_text">Environment modification detected, exiting…</string>
    <string name="login_activity__login_label">Login</string>
    <string name="login_activity__email_hint">E-mail Address</string>
    <string name="login_activity__account_number_hint">Account Number</string>
    <string name="login_activity__password_hint">Password</string>
    <string name="login_activity__login_button_label">Login</string>
    <string name="login_activity__register_button_label">Register</string>
    <string name="login_activity__wrong_passcode_alert_text">Wrong e-mail address, account number, and password combination!</string>
    <string name="register_activity__activate_label">Activate M-banking</string>
    <string name="register_activity__register_label">Register</string>
    <string name="register_activity__email_hint">E-mail Address</string>
    <string name="register_activity__account_number_hint">Account Number</string>
    <string name="register_activity__password_hint">Password</string>
    <string name="register_activity__register_button_label">Register</string>
    <string name="home_activity__account_balance_label">Account Balance</string>
    <string name="home_activity__transfer_label">Transfer</string>
    <string name="home_activity__change_password_label">Change Password</string>
    <string name="home_activity__logout_label">Logout</string>
    <string name="home_activity__check_balance_info_email_text">Email: </string>
    <string name="home_activity__check_balance_info_account_number_text">Account: </string>
    <string name="home_activity__check_balance_info_balance_text">Balance: Rp. </string>
    <string name="home_activity__check_balance_positive_resp_text">OK</string>
    <string name="transfer_activity__transfer_label">Transfer to Another Account</string>
    <string name="transfer_activity__email_hint">E-mail Address</string>
    <string name="transfer_activity__account_number_hint">Account Number</string>
    <string name="transfer_activity__transfer_amount_hint">Transfer Amount</string>
    <string name="transfer_activity__transfer_button_label">Transfer</string>
    <string name="transfer_activity__insufficient_balance_alert_text">Transfer amount cannot exceeds your account balance! Current balance: Rp. </string>
    <string name="transfer_activity__target_not_exist_alert_text">Account number does not exist!</string>
    <string name="transfer_activity__success_transfer_alert_text">Success transfer money!</string>
    <string name="change_password_activity__change_password_label">Change Password</string>
    <string name="change_password_activity__password_hint">Password</string>
    <string name="change_password_activity__change_button_label">Change</string>
    <string name="change_password_activity__passcode_length_alert_text">Your password must be 6 digits!</string>
</resources>