<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_activity__change_password_label"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/change_password_activity__password_hint"
            android:textAlignment="center"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_activity__change_button_label" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>